Remove analytics stuff

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Zuckerberg Smile Property</title>
+  <title>zuckerberg.smile</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,22 +29,13 @@
         <span class="mood__number">1.0</span>
       </div>
     </div>
-
   </main>
 
   <footer>
     by <a href="https://twitter.com/terkelg">@terkelg</a>
   </footer>
 
-
   <script src="./main.js"></script>
-
-  <!-- <1!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. --1> -->
-  <!-- <script> -->
-  <!--   window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date; -->
-  <!--   ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview') -->
-  <!-- </script> -->
-  <!-- <script src="https://www.google-analytics.com/analytics.js" async defer></script> -->
 </body>
 
 </html>
